--- a/embedded-cassandra-spring-boot-parent/embedded-cassandra-spring-boot-starter/pom.xml
+++ b/embedded-cassandra-spring-boot-parent/embedded-cassandra-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.nosan</groupId>
         <artifactId>embedded-cassandra-spring-boot-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>embedded-cassandra-spring-boot-starter</artifactId>
