--- a/embedded-cassandra-spring-boot-parent/pom.xml
+++ b/embedded-cassandra-spring-boot-parent/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>embedded-cassandra-spring-boot-autoconfigure</module>
+        <module>embedded-cassandra-spring-boot-starter</module>
     </modules>
 
 
