--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <junit.jupiter.version>5.4.1</junit.jupiter.version>
         <checkstyle.version>8.18</checkstyle.version>
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <embedded-cassandra.version>1.4.2</embedded-cassandra.version>
+        <embedded-cassandra.version>1.4.3-SNAPSHOT</embedded-cassandra.version>
     </properties>
 
     <dependencyManagement>
@@ -361,5 +361,14 @@
         <module>embedded-cassandra-spring-boot-parent</module>
     </modules>
 
+    <repositories>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
