--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -178,14 +178,15 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.1</version>
                     <configuration>
-                        <forkCount>0</forkCount>
+                        <forkCount>1</forkCount>
                         <reportFormat>brief</reportFormat>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                        <useFile>false</useFile>
+                        <useFile>true</useFile>
                         <disableXmlReport>true</disableXmlReport>
                         <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                         <failIfNoTests>false</failIfNoTests>
                         <trimStackTrace>false</trimStackTrace>
+                        <argLine>-Xms256m -Xmx512m</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
