--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,6 +8,10 @@ environment:
   matrix:
     - JAVA_HOME: C:/Program Files/Java/jdk1.8.0
 
+before_build:
+  - java -version
+  - mvnw.cmd clean install -DskipTests=true -B -U -V
+
 build_script:
   - java -version
   - mvnw.cmd -B -U clean install
