--- a/embedded-cassandra-spring-boot-parent/embedded-cassandra-spring-boot-autoconfigure/pom.xml
+++ b/embedded-cassandra-spring-boot-parent/embedded-cassandra-spring-boot-autoconfigure/pom.xml
@@ -29,6 +29,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.datastax.oss</groupId>
+            <artifactId>java-driver-core</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
             <optional>true</optional>
