--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <checkstyle.version>8.18</checkstyle.version>
         <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
         <embedded-cassandra.version>2.0.1-SNAPSHOT</embedded-cassandra.version>
+        <java-driver-core.version>4.0.1</java-driver-core.version>
     </properties>
 
     <dependencyManagement>
@@ -48,6 +49,11 @@
                 <groupId>com.github.nosan</groupId>
                 <artifactId>embedded-cassandra-spring-boot-autoconfigure</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.datastax.oss</groupId>
+                <artifactId>java-driver-core</artifactId>
+                <version>${java-driver-core.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
