--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <show>package</show>
                     <failOnWarnings>true</failOnWarnings>
                     <failOnError>true</failOnError>
                 </configuration>
