--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <junit.jupiter.version>5.4.1</junit.jupiter.version>
         <checkstyle.version>8.20</checkstyle.version>
         <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
-        <embedded-cassandra.version>2.0.1</embedded-cassandra.version>
+        <embedded-cassandra.version>2.0.2-SNAPSHOT</embedded-cassandra.version>
         <java-driver-core.version>4.0.1</java-driver-core.version>
     </properties>
 
