--- a/embedded-cassandra-spring-boot-parent/pom.xml
+++ b/embedded-cassandra-spring-boot-parent/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.nosan</groupId>
         <artifactId>embedded-cassandra-spring-boot-project</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <name>Embedded Cassandra Spring Boot Parent</name>
