--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.nosan</groupId>
     <artifactId>embedded-cassandra-spring-boot-project</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Embedded Cassandra Spring Boot Project</name>
@@ -36,10 +36,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <assertj.version>3.12.2</assertj.version>
-        <junit.jupiter.version>5.5.0</junit.jupiter.version>
+        <junit.jupiter.version>5.5.1</junit.jupiter.version>
         <checkstyle.version>8.22</checkstyle.version>
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
-        <embedded-cassandra.version>2.0.4</embedded-cassandra.version>
+        <spring-boot.version>2.2.0.M6</spring-boot.version>
+        <embedded-cassandra.version>3.0.0.RC2</embedded-cassandra.version>
         <java-driver-core.version>4.1.0</java-driver-core.version>
     </properties>
 
@@ -47,8 +47,8 @@
         <dependencies>
             <dependency>
                 <groupId>com.github.nosan</groupId>
-                <artifactId>embedded-cassandra-spring-boot-autoconfigure</artifactId>
-                <version>${project.version}</version>
+                <artifactId>embedded-cassandra</artifactId>
+                <version>${embedded-cassandra.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.datastax.oss</groupId>
@@ -81,28 +81,13 @@
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.nosan</groupId>
-                <artifactId>embedded-cassandra</artifactId>
-                <version>${embedded-cassandra.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${junit.jupiter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-params</artifactId>
-                <version>${junit.jupiter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
+                <artifactId>junit-jupiter</artifactId>
                 <version>${junit.jupiter.version}</version>
             </dependency>
         </dependencies>
@@ -271,7 +256,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <show>package</show>
+                    <show>protected</show>
                     <failOnWarnings>true</failOnWarnings>
                     <failOnError>true</failOnError>
                 </configuration>
@@ -302,7 +287,7 @@
 
     <profiles>
         <profile>
-            <id>deploy</id>
+            <id>release</id>
             <build>
                 <plugins>
                     <plugin>
@@ -360,7 +345,8 @@
     </profiles>
 
     <modules>
-        <module>embedded-cassandra-spring-boot-parent</module>
+        <module>embedded-cassandra-spring-boot-autoconfigure</module>
+        <module>embedded-cassandra-spring-boot-starter</module>
     </modules>
 
     <repositories>
@@ -371,6 +357,12 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
     </repositories>
+
 
 </project>
