--- a/embedded-cassandra-spring-boot-autoconfigure/pom.xml
+++ b/embedded-cassandra-spring-boot-autoconfigure/pom.xml
@@ -63,11 +63,8 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>false</skip>
-                </configuration>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
