--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,20 +1,12 @@
 version: "{build}"
 image: Visual Studio 2017
 
-build:
-  verbosity: detailed
-
 environment:
   matrix:
     - JAVA_HOME: C:/Program Files/Java/jdk1.8.0
 
-before_build:
-  - java -version
-  - mvnw.cmd clean install -DskipTests=true -B -U -V
-
 build_script:
-  - java -version
-  - mvnw.cmd -B -U clean install
+  - mvnw.cmd clean verify -B -V
 
 cache:
   - C:/Users/appveyor/.m2
