--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,7 +6,7 @@ environment:
     - JAVA_HOME: C:/Program Files/Java/jdk1.8.0
 
 build_script:
-  - mvnw.cmd clean verify -B -V
+  - mvnw.cmd clean verify -B -U -V
 
 cache:
   - C:/Users/appveyor/.m2
