--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
         <java.version>1.8</java.version>
         <assertj.version>3.13.2</assertj.version>
         <checkstyle.version>8.25</checkstyle.version>
-        <spring-boot.version>2.2.0.M6</spring-boot.version>
-        <embedded-cassandra.version>3.0.0-SNAPSHOT</embedded-cassandra.version>
-        <java-driver-core.version>4.2.1</java-driver-core.version>
+        <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
+        <embedded-cassandra.version>3.0.0</embedded-cassandra.version>
+        <java-driver-core.version>4.2.2</java-driver-core.version>
         <nexus.url>https://oss.sonatype.org</nexus.url>
     </properties>
 
