--- a/embedded-cassandra-spring-boot-starter/pom.xml
+++ b/embedded-cassandra-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.nosan</groupId>
         <artifactId>embedded-cassandra-spring-boot-project</artifactId>
-        <version>2.0.5</version>
+        <version>2.0.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>embedded-cassandra-spring-boot-starter</artifactId>
