--- a/embedded-cassandra-spring-boot-starter/pom.xml
+++ b/embedded-cassandra-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.nosan</groupId>
         <artifactId>embedded-cassandra-spring-boot-project</artifactId>
-        <version>2.0.6-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>embedded-cassandra-spring-boot-starter</artifactId>
@@ -17,10 +17,10 @@
 
     <name>Embedded Cassandra Spring Boot Starter</name>
 
-    <url>https://github.com/nosan/embedded-cassandra-spring-boot</url>
+    <url>https://github.com/nosan/embedded-cassandra-spring-boot-starter</url>
 
     <scm>
-        <url>https://github.com/nosan/embedded-cassandra-spring-boot.git</url>
+        <url>https://github.com/nosan/embedded-cassandra-spring-boot-starter.git</url>
     </scm>
 
 
@@ -39,27 +39,26 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>flatten-maven-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <configuration>
-                    <skipSource>true</skipSource>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
