--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
           restore-keys: |
             ${{ matrix.os }}-maven-
       - name: Maven Clean Deploy
-        run: mvn -B -U clean deploy -P deploy -DskipTests
+        run: mvn -B clean deploy -P deploy -DskipTests
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.OSSRH_TOKEN }}
