--- a/embedded-cassandra-spring-boot-autoconfigure/pom.xml
+++ b/embedded-cassandra-spring-boot-autoconfigure/pom.xml
@@ -21,7 +21,9 @@
     <scm>
         <url>https://github.com/nosan/embedded-cassandra-spring-boot-starter.git</url>
     </scm>
-
+    <properties>
+        <project.root.directory>${project.basedir}/..</project.root.directory>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.github.nosan</groupId>
@@ -54,6 +56,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.github.nosan.boot.autoconfigure.embedded.cassandra
+                            </Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <profiles>
         <profile>
             <id>deploy</id>
