--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ on:
     paths-ignore:
       - '**.md'
   pull_request:
-    branches: "master"
+    branches:  [ master ]
     paths-ignore:
       - '**.md'
 
