--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.nosan</groupId>
     <artifactId>embedded-cassandra-spring-boot-project</artifactId>
-    <version>4.0.1-SNAPSHOT</version>
+    <version>4.0.1</version>
     <packaging>pom</packaging>
 
     <name>Embedded Cassandra Spring Boot Project</name>
@@ -40,7 +40,7 @@
         <java.version>1.8</java.version>
         <checkstyle.version>8.39</checkstyle.version>
         <spring-boot.version>2.4.2</spring-boot.version>
-        <embedded-cassandra.version>4.0.0</embedded-cassandra.version>
+        <embedded-cassandra.version>4.0.1</embedded-cassandra.version>
         <nexus.url>https://oss.sonatype.org</nexus.url>
         <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
