--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,10 +15,7 @@ jobs:
     strategy:
       matrix:
         java: [ 8, 11 ]
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-        exclude:
-          - os: windows-latest
-            java: 11
+        os: [ ubuntu-latest,  macos-latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
