--- a/embedded-cassandra-spring-boot-autoconfigure/pom.xml
+++ b/embedded-cassandra-spring-boot-autoconfigure/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.nosan</groupId>
         <artifactId>embedded-cassandra-spring-boot-project</artifactId>
-        <version>4.0.9-SNAPSHOT</version>
+        <version>4.1.0</version>
     </parent>
 
     <artifactId>embedded-cassandra-spring-boot-autoconfigure</artifactId>
