--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,25 +3,30 @@ name: "build"
 on:
   push:
     paths-ignore:
+      - '**.adoc'
       - '**.md'
+      - '.github/**'
   pull_request:
-    branches:  [ master ]
+    branches: [ master ]
     paths-ignore:
+      - '**.adoc'
       - '**.md'
+      - '.github/**'
 
 jobs:
   build:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        java: [ 8, 11 ]
-        os: [ ubuntu-latest,  macos-latest ]
+        java: [ 11 ]
+        os: [ ubuntu-latest, macos-latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: ${{ matrix.java }}
       - name: Cache local Maven repository
         uses: actions/cache@v2
